First pass of review years later

--- a/index.html
+++ b/index.html
@@ -6,126 +6,190 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145161862-3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-145161862-3');
     </script>
 
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Frequently asked questions about a shitty medical condition. Fructose malabsorption occurs when your body is unable to digest the sugar fructose.">
-  <meta name="keywords" content="fructose, malabsorption">
-  <meta name="author" content="David Šmehlík">
-  <title>Fructose Malabsorption FAQ</title>
-  
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="img/favicon.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="Frequently asked questions about a shitty medical condition. Fructose malabsorption occurs when your body is unable to digest the sugar fructose.">
+    <meta name="keywords" content="fructose, malabsorption">
+    <meta name="author" content="Dave">
+    <title>Fructose Malabsorption FAQ</title>
+
+    <!-- Links -->
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="img/favicon.png" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="content">
+    <main>
 
-        <div class="header">
-            <div class="title">
+        <div class="hero">
+            <div class="hero-text">
                 <div>
                     <h1>Fructose<br>Malabsorption<br>FAQ</h1>
                     <p><i>Frequently asked questions<br>about a shitty medical condition</i></p>
                 </div>
-                <p class="caption">Illustration adapted from <a href="https://www.amandaoleander.com/" target="_blank">Amanda Oleander</a></p>
+                <p class="caption">Illustration adapted from <a href="https://www.amandaoleander.com/"
+                        target="_blank">Amanda Oleander</a></p>
             </div>
-            <img src="img/boy-or-girl.svg" alt="A woman asks another person who looks pregnant: A boy or girl? The person replies: Just gas!" class="hero-img">
+
+            <img src="img/boy-or-girl.svg"
+                alt="A woman asks another person who looks pregnant: A boy or girl? The person replies: Just gas!"
+                class="hero-img">
         </div>
 
+        <!-- Cards grid -->
         <div class="grid">
             <div>
-                <h2>🍏 What is fructose?</h2>
-                <p><a href="https://en.m.wikipedia.org/wiki/Fructose" target="_blank">Fructose</a> is a naturally occurring simple sugar. You can find it in fruit, hence the name fructose, vegetables, or honey. Fructose also makes up 50% of table sugar, sucrose, the other half being another simple sugar, glucose.</p>
+                <h2>🍏<br>What is fructose?</h2>
+                <p><a href="https://en.m.wikipedia.org/wiki/Fructose" target="_blank">Fructose</a> is a naturally
+                    occurring simple sugar. You can find it in fruit, hence the name fructose, vegetables, or honey.
+                    Fructose also makes up 50% of table sugar, sucrose, the other half being another simple sugar,
+                    glucose.</p>
             </div>
 
             <div>
-                <h2>🧨 What is fructose malabsorption?</h2>
-                <p><a href="https://en.m.wikipedia.org/wiki/Fructose_malabsorption" target="_blank">FM</a> occurs when your body isn't able to absorb fructose in the small intestine and send it to the liver. Instead, fructose stays in the gut where it is not supposed to be and gets fermented by your gut microbiota. That disrupts the normal digestive process.</p>
+                <h2>🧨<br>What is fructose malabsorption?</h2>
+                <p><a href="https://en.m.wikipedia.org/wiki/Fructose_malabsorption" target="_blank">FM</a> occurs when
+                    your body isn't able to absorb fructose in the small intestine and send it to the liver. Instead,
+                    fructose stays in the gut where it is not supposed to be and gets fermented by your gut microbiota.
+                    That disrupts the normal digestive process.</p>
             </div>
 
             <div>
-                <h2>💩 What are the symptoms?</h2>
-                <p>Diarrhea or loose stools, gas, bloating, abdominal pain, chronic fatigue, headaches, nutritional deficiencies, possibly depression.</p>
+                <h2>💩<br>What are the symptoms?</h2>
+                <p>Diarrhea or loose stools, gas, bloating, abdominal pain, chronic fatigue, headaches, nutritional
+                    deficiencies, potentially depression.</p>
             </div>
 
             <div>
-                <h2>🔬 How do I get tested?</h2>
-                <p>With a <a href="https://en.m.wikipedia.org/wiki/Hydrogen_breath_test" target="_blank">hydrogen breath test</a>. Procedure: Arrive on empty stomach, brush teeth at doctor's office, drink fructose solution, breathe every 15 minutes into a plastic bag for 4 hours, discuss results. Don't get surprised if SIBO, <a href="https://en.m.wikipedia.org/wiki/Small_intestinal_bacterial_overgrowth" target="_blank">small intestinal bacterial overgrowth</a>, is diagnosed along with FM.</p>
+                <h2>🔬<br>How do I get tested?</h2>
+                <p>With a <a href="https://en.m.wikipedia.org/wiki/Hydrogen_breath_test" target="_blank">hydrogen breath
+                        test</a>. Procedure: Arrive on empty stomach, brush teeth at doctor's office, drink fructose
+                    solution, breathe every 15 minutes into a plastic bag for 4 hours, discuss results. Don't get
+                    surprised if SIBO, <a href="https://en.m.wikipedia.org/wiki/Small_intestinal_bacterial_overgrowth"
+                        target="_blank">small intestinal bacterial overgrowth</a>, is diagnosed along with FM.</p>
             </div>
 
             <div>
-                <h2>🩹 What's the treatment?</h2>
-                <p>As of 2020, there is no cure but it can be managed by strictly following a low- or no-fructose diet, and taking a xylose isomerase enzyme before a meal containing fructose. Brand names for xylose isomerase are <a href="https://amzn.to/2VSVG8y" target="_blank">Fructaid</a> and <a href="http://rover.ebay.com/rover/1/711-53200-19255-0/1?ff3=4&pub=5575585655&toolid=10001&campid=5338680335&customid=&mpre=https%3A%2F%2Fwww.ebay.com%2Fitm%2FLutomerase-108-capsules-Fructose-intolerance-malabsorption-Xylose-Isomerase%2F252926486520" target="_blank">Lutomerase</a>.</p>
+                <h2>🩹<br>What's the treatment?</h2>
+                <p>As of 2020, there is no cure but it can be managed by strictly following a low- or no-fructose diet,
+                    and taking a xylose isomerase enzyme before a meal containing fructose. Brand names for xylose
+                    isomerase are <a href="https://amzn.to/2VSVG8y" target="_blank">Fructaid</a> and <a
+                        href="http://rover.ebay.com/rover/1/711-53200-19255-0/1?ff3=4&pub=5575585655&toolid=10001&campid=5338680335&customid=&mpre=https%3A%2F%2Fwww.ebay.com%2Fitm%2FLutomerase-108-capsules-Fructose-intolerance-malabsorption-Xylose-Isomerase%2F252926486520"
+                        target="_blank">Lutomerase</a>.</p>
             </div>
 
             <div>
-                <h2>🥄 What can I eat?</h2>
-                <p>One of the best strategies, besides seeing a specialist, is to get a mobile app with a database of foods and their fructose content. For instance <a href="https://www.baliza.de/en/apps/histamine.html" target="_blank">Food Intolerances</a> or <a href="https://www.monashfodmap.com/ibs-central/i-have-ibs/get-the-app/" target="_blank">Monash University FODMAP Diet</a>. A lesser-known option that is safe is to get nutritionally complete powder food. For example <a href="https://superbodyfuel.com/" target="_blank">Super Body Fuel</a> (except for strawberry flavor). For <a href="https://www.blendrunner.com/" target="_blank">other brands</a>, be sure to check their list of ingredients.</p>
+                <h2>🥄<br>What can I eat?</h2>
+                <p>One of the best strategies, besides seeing a specialist, is to get a mobile app with a database of
+                    foods and their fructose content. For instance <a
+                        href="https://www.baliza.de/en/apps/histamine.html" target="_blank">Food Intolerances</a> or <a
+                        href="https://www.monashfodmap.com/ibs-central/i-have-ibs/get-the-app/" target="_blank">Monash
+                        University FODMAP Diet</a>. A lesser-known option that is safe is to get nutritionally complete
+                    powder food. For example <a href="https://superbodyfuel.com/" target="_blank">Super Body Fuel</a>
+                    (except for strawberry flavor). For <a href="https://www.blendrunner.com/" target="_blank">other
+                        brands</a>, be sure to check their list of ingredients.</p>
             </div>
 
             <div>
-                <h2>🧅 Anything else to avoid besides fructose?</h2>
-                <p>Yes, the general advice is to minimize or eliminate fructans and polyols. However, test the degree of your individual sensitivity. <a href="https://en.m.wikipedia.org/wiki/Fructan" target="_blank">Fructans</a> are chains of fructose molecules and are mainly found in garlic, onion, and wheat. <a href="https://en.m.wikipedia.org/wiki/Polyol" target="_blank">Polyols</a> are sugar alcohols and include sorbitol, mannitol, maltitol, xylitol, erythritol, isomalt.</p>
+                <h2>🧅<br>Anything else to avoid besides fructose?</h2>
+                <p>Yes, the general advice is to minimize or eliminate fructans and polyols. However, test the degree of
+                    your individual sensitivity. <a href="https://en.m.wikipedia.org/wiki/Fructan"
+                        target="_blank">Fructans</a> are chains of fructose molecules and are mainly found in garlic,
+                    onion, and wheat. <a href="https://en.m.wikipedia.org/wiki/Polyol" target="_blank">Polyols</a> are
+                    sugar alcohols and include sorbitol, mannitol, maltitol, xylitol, erythritol, isomalt.</p>
             </div>
 
             <div>
-                <h2>🍪 Can I eat sweet things?</h2>
-                <p>Yes, but only those sweetened with glucose ie. dextrose, lactose, monk fruit extract. Avoid foods sweetened with fructose, table sugar ie. sucrose, honey, high fructose corn syrup, which all contain fructose. This is not an exhaustive list, check your fructose diet mobile app for more.</p>
+                <h2>🍪<br>Can I eat sweet things?</h2>
+                <p>Yes, but only those sweetened with glucose ie. dextrose, lactose, monk fruit extract. Avoid foods
+                    sweetened with fructose, table sugar ie. sucrose, honey, high fructose corn syrup, which all contain
+                    fructose. This is not an exhaustive list, check your fructose diet mobile app for more.</p>
             </div>
 
             <div>
-                <h2>🍞 Do I need to go gluten-free?</h2>
-                <p>No, unless you are a <a href="https://en.m.wikipedia.org/wiki/Coeliac_disease" target="_blank">celiac</a> or have a gluten sensitivity unrelated to fructose malabsorption. While the protein <a href="https://en.m.wikipedia.org/wiki/Gluten" target="_blank">gluten</a> itself is not an issue for fructose malabsorbers, wheat does contain fructans. Some gluten-containing grains, like oats, which contain gluten due to facility cross-contamination, are safe.</p>
+                <h2>🍞<br>Do I need to go gluten-free?</h2>
+                <p>No, unless you are a <a href="https://en.m.wikipedia.org/wiki/Coeliac_disease"
+                        target="_blank">celiac</a> or have a gluten sensitivity unrelated to fructose malabsorption.
+                    While the protein <a href="https://en.m.wikipedia.org/wiki/Gluten" target="_blank">gluten</a> itself
+                    is not an issue for fructose malabsorbers, wheat does contain fructans. Some gluten-containing
+                    grains, like oats, which contain gluten due to facility cross-contamination, are safe.</p>
             </div>
 
             <div>
-                <h2>🍚 What is a low FODMAP diet?</h2>
-                <p>The acronym stands for <a href="https://en.m.wikipedia.org/wiki/FODMAP" target="_blank">Fermentable Oligo-, Di-, Mono-saccharides And Polyols</a>, and the diet is recommended to IBS sufferers. Saccharide means carbohydrate and the prefixes refer to the number of sugar units – few, two, one – in one molecule of the saccharide. For fructose malabsorbers, the <a href="https://en.m.wikipedia.org/wiki/Low-FODMAP_diet" target="_blank">low FODMAP diet</a> is overly restrictive as it advises against dairy products like yogurt, milk, and soft cheese due to the disaccharide lactose.</p>
+                <h2>🍚<br>What is a low FODMAP diet?</h2>
+                <p>The acronym stands for <a href="https://en.m.wikipedia.org/wiki/FODMAP" target="_blank">Fermentable
+                        Oligo-, Di-, Mono-saccharides And Polyols</a>, and the diet is recommended to IBS sufferers.
+                    Saccharide means carbohydrate and the prefixes refer to the number of sugar units – few, two, one –
+                    in one molecule of the saccharide. For fructose malabsorbers, the <a
+                        href="https://en.m.wikipedia.org/wiki/Low-FODMAP_diet" target="_blank">low FODMAP diet</a> is
+                    overly restrictive as it advises against dairy products like yogurt, milk, and soft cheese due to
+                    the disaccharide lactose.</p>
             </div>
 
             <div>
-                <h2>🧑‍⚕️ Will my family doctor be familiar with this disorder?</h2>
-                <p>Unlikely, unfortunately. It seems FM is still quite unknown among physicians. However, your experience may vary.</p>
+                <h2>🧑‍⚕️<br>Will my family doctor be familiar with this disorder?</h2>
+                <p>Unlikely, unfortunately. It seems FM is still quite unknown among physicians. However, your
+                    experience may vary.</p>
             </div>
 
             <div>
-                <h2>🧬 Is it genetic?</h2>
-                <p>There is anecdotal evidence fructose malabsorption runs in families, often undiagnosed. However, the origin of FM remains unresolved and more research is needed to better understand its causes.</p>
+                <h2>🧬<br>Is it genetic?</h2>
+                <p>There is anecdotal evidence fructose malabsorption runs in families, often undiagnosed. However, the
+                    origin of FM remains unresolved and more research is needed to better understand its causes.</p>
             </div>
 
             <div>
-                <h2>🧐 Is fructose malabsorption fructose intolerance?</h2>
-                <p>Fructose intolerance usually refers to <a href="https://en.m.wikipedia.org/wiki/Hereditary_fructose_intolerance" target="_blank">Hereditary fructose intolerance</a>, which is a separate condition from <a href="https://en.m.wikipedia.org/wiki/Fructose_malabsorption" target="_blank">fructose malabsorption</a>. HFI is caused by mutations in the gene that codes for the enzyme aldolase B. This enzyme metabolizes fructose in the liver rather than in the small intestine.</p>
+                <h2>🧐<br>Is fructose malabsorption fructose intolerance?</h2>
+                <p>Fructose intolerance usually refers to <a
+                        href="https://en.m.wikipedia.org/wiki/Hereditary_fructose_intolerance"
+                        target="_blank">Hereditary fructose intolerance</a>, which is a separate condition from <a
+                        href="https://en.m.wikipedia.org/wiki/Fructose_malabsorption" target="_blank">fructose
+                        malabsorption</a>. HFI is caused by mutations in the gene that codes for the enzyme aldolase B.
+                    This enzyme metabolizes fructose in the liver rather than in the small intestine.</p>
             </div>
 
             <div>
-                <h2>⌨️ Are there any online communities?</h2>
-                <p>Yes, <a href="https://www.reddit.com/r/fructosemalabsorption/" target="_blank">r/fructosemalabsorption</a> on Reddit, <a href="https://www.facebook.com/groups/fructosemalabsorptionusa/" target="_blank">Fructose Malabsorption USA</a> and <a href="https://www.facebook.com/groups/FMSGVIC/" target="_blank">Fructose Malabsorption Victoria</a> on Facebook. If you join, be a good person, but use critical thinking and watch out for misinformation. Trust but verify.</p>
+                <h2>⌨️<br>Are there any online communities?</h2>
+                <p>Yes, <a href="https://www.reddit.com/r/fructosemalabsorption/"
+                        target="_blank">r/fructosemalabsorption</a> on Reddit, <a
+                        href="https://www.facebook.com/groups/fructosemalabsorptionusa/" target="_blank">Fructose
+                        Malabsorption USA</a> and <a href="https://www.facebook.com/groups/FMSGVIC/"
+                        target="_blank">Fructose Malabsorption Victoria</a> on Facebook. If you join, be a good person,
+                    but use critical thinking and watch out for misinformation. Trust but verify.</p>
             </div>
 
         </div> <!-- end of grid -->
 
-        <p class="github"><a href="https://github.com/akuataya/fmfaq/issues" target="_blank">+ Suggest a new question</a></p>
+        <p class="github"><a href="https://github.com/akuataya/fmfaq/issues" target="_blank">+ Suggest a new
+                question, or tell me what to improve</a></p>
 
         <div class="author-box">
             <div>
                 <h2>About the Author</h2>
-                <p>Inspired by the millionth fructose-induced diarrhea, David changed his major to molecular biology during graduate school. Now he is studying absorption and metabolism of fructose to identify the gene or genes that may be responsible for the development of fructose malabsorption.</p>
+                <p>Inspired by the millionth fructose-induced diarrhea, Dave changed his major to molecular biology
+                    during graduate school. Now he is studying absorption and metabolism of fructose to identify the
+                    gene or genes that may be responsible for the development of fructose malabsorption.</p>
             </div>
 
-            <img src="img/memoji.png" alt="Author Memoji" class="memoji">
+            <img src="img/memoji.png" alt="Memoji of the site's author" class="memoji">
         </div>
 
-    </div> <!-- end of content -->
+    </main>
 
-    <div class="footer">
-        <p>Buy <a href="https://www.notion.so/David-mehl-k-1b4db0e80f3c4f21912e86f23a5ece4b" target="_blank">me</a> a cup of <a href="https://ko-fi.com/akuataya" target="_blank">coffee</a> or get something cool in my <a href="https://www.etsy.com/shop/akuataya" target="_blank">Etsy Store</a>.</p>
-    </div>
+    <footer>
+        <p>© 2020—Present. Buy <a href="https://www.dnarna.co" target="_blank">me</a> a
+            cup of <a href="https://ko-fi.com/davbl" target="_blank">coffee</a> :)</p>
+    </footer>
 
 </body>
+
 </html>
