Reviewed and improved all text, incl. links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!-- 
+
+  Design and code by Dave 
+  ⸺
+  dnarna.co
+
+-->
 <html lang="en">
 
 <head>
@@ -48,33 +55,35 @@
             <div>
                 <h2>🧨<br>What is fructose malabsorption?</h2>
                 <p><a href="https://en.m.wikipedia.org/wiki/Fructose_malabsorption" target="_blank">FM</a> occurs when
-                    your body isn't able to absorb fructose in the small intestine and send it to the liver. Instead,
-                    fructose stays in the gut where it is not supposed to be and gets fermented by your gut microbiota.
-                    That disrupts the normal digestive process.</p>
+                    your small intestine cannot effectively absorb fructose, preventing it from reaching its
+                    destination, the liver. This
+                    leads to excess fructose in the gut, where it binds water and undergoes fermentation by gut
+                    microbiota, disrupting
+                    the normal digestive process.</p>
             </div>
 
             <div>
                 <h2>💩<br>What are the symptoms?</h2>
-                <p>Diarrhea or loose stools, gas, bloating, abdominal pain, chronic fatigue, headaches, nutritional
-                    deficiencies, potentially depression.</p>
+                <p>Diarrhea or loose stools, gas, bloating, abdominal pain, chronic fatigue, headaches, sometimes
+                    nutritional
+                    deficiencies (tryptophan, folic acid, and zinc).</p>
             </div>
 
             <div>
                 <h2>🔬<br>How do I get tested?</h2>
                 <p>With a <a href="https://en.m.wikipedia.org/wiki/Hydrogen_breath_test" target="_blank">hydrogen breath
-                        test</a>. Procedure: Arrive on empty stomach, brush teeth at doctor's office, drink fructose
-                    solution, breathe every 15 minutes into a plastic bag for 4 hours, discuss results. Don't get
-                    surprised if SIBO, <a href="https://en.m.wikipedia.org/wiki/Small_intestinal_bacterial_overgrowth"
-                        target="_blank">small intestinal bacterial overgrowth</a>, is diagnosed along with FM.</p>
+                        test</a>. Procedure: Arrive on an empty stomach, brush teeth at the doctor's office, drink a
+                    fructose
+                    solution, breathe into a plastic bag every 15 minutes for 4 hours, and discuss results.</p>
             </div>
 
             <div>
                 <h2>🩹<br>What's the treatment?</h2>
-                <p>As of 2020, there is no cure but it can be managed by strictly following a low- or no-fructose diet,
+                <p>As of 2020, there is no cure. However, FM can be managed by following a low- or no-fructose diet,
                     and taking a xylose isomerase enzyme before a meal containing fructose. Brand names for xylose
-                    isomerase are <a href="https://amzn.to/2VSVG8y" target="_blank">Fructaid</a> and <a
-                        href="http://rover.ebay.com/rover/1/711-53200-19255-0/1?ff3=4&pub=5575585655&toolid=10001&campid=5338680335&customid=&mpre=https%3A%2F%2Fwww.ebay.com%2Fitm%2FLutomerase-108-capsules-Fructose-intolerance-malabsorption-Xylose-Isomerase%2F252926486520"
-                        target="_blank">Lutomerase</a>.</p>
+                    isomerase include <a href="https://fructaidhealth.com/" target="_blank">Fructaid</a>, Lutomerase,
+                    and
+                    others. Unless the FM is only a symptom of a broader gastrointestinal condition.</p>
             </div>
 
             <div>
@@ -83,7 +92,8 @@
                     foods and their fructose content. For instance <a
                         href="https://www.baliza.de/en/apps/histamine.html" target="_blank">Food Intolerances</a> or <a
                         href="https://www.monashfodmap.com/ibs-central/i-have-ibs/get-the-app/" target="_blank">Monash
-                        University FODMAP Diet</a>. A lesser-known option that is safe is to get nutritionally complete
+                        University FODMAP Diet</a>. A lesser-known option that is safe is to supplement with
+                    nutritionally complete
                     powder food. For example <a href="https://superbodyfuel.com/" target="_blank">Super Body Fuel</a>
                     (except for strawberry flavor). For <a href="https://www.blendrunner.com/" target="_blank">other
                         brands</a>, be sure to check their list of ingredients.</p>
@@ -91,7 +101,7 @@
 
             <div>
                 <h2>🧅<br>Anything else to avoid besides fructose?</h2>
-                <p>Yes, the general advice is to minimize or eliminate fructans and polyols. However, test the degree of
+                <p>Yes, the general advice is to limit or eliminate fructans and polyols. However, test the degree of
                     your individual sensitivity. <a href="https://en.m.wikipedia.org/wiki/Fructan"
                         target="_blank">Fructans</a> are chains of fructose molecules and are mainly found in garlic,
                     onion, and wheat. <a href="https://en.m.wikipedia.org/wiki/Polyol" target="_blank">Polyols</a> are
@@ -100,7 +110,8 @@
 
             <div>
                 <h2>🍪<br>Can I eat sweet things?</h2>
-                <p>Yes, but only those sweetened with glucose ie. dextrose, lactose, monk fruit extract. Avoid foods
+                <p>Yes, but only those sweetened with glucose ie. dextrose, lactose, stevia, monk fruit extract, and
+                    artificial sweeteners except for polyols. Avoid foods
                     sweetened with fructose, table sugar ie. sucrose, honey, high fructose corn syrup, which all contain
                     fructose. This is not an exhaustive list, check your fructose diet mobile app for more.</p>
             </div>
@@ -111,7 +122,7 @@
                         target="_blank">celiac</a> or have a gluten sensitivity unrelated to fructose malabsorption.
                     While the protein <a href="https://en.m.wikipedia.org/wiki/Gluten" target="_blank">gluten</a> itself
                     is not an issue for fructose malabsorbers, wheat does contain fructans. Some gluten-containing
-                    grains, like oats, which contain gluten due to facility cross-contamination, are safe.</p>
+                    grains, like oats, which contain gluten due to facility cross-contamination, are generally safe.</p>
             </div>
 
             <div>
@@ -126,15 +137,17 @@
             </div>
 
             <div>
-                <h2>🧑‍⚕️<br>Will my family doctor be familiar with this disorder?</h2>
-                <p>Unlikely, unfortunately. It seems FM is still quite unknown among physicians. However, your
-                    experience may vary.</p>
+                <h2>🧑‍⚕️<br>Will my primary care physician be familiar with this disorder?</h2>
+                <p>Unfortunately, the probability is on the lower side. While FM is still gaining recognition in the
+                    medical community, specialists such as
+                    gastroenterologists and registered dietitians
+                    are typically more familiar with diagnosing and managing this condition.</p>
             </div>
 
             <div>
                 <h2>🧬<br>Is it genetic?</h2>
                 <p>There is anecdotal evidence fructose malabsorption runs in families, often undiagnosed. However, the
-                    origin of FM remains unresolved and more research is needed to better understand its causes.</p>
+                    origin of FM remains unresolved, and more research is needed to better understand its causes.</p>
             </div>
 
             <div>
@@ -154,7 +167,7 @@
                         href="https://www.facebook.com/groups/fructosemalabsorptionusa/" target="_blank">Fructose
                         Malabsorption USA</a> and <a href="https://www.facebook.com/groups/FMSGVIC/"
                         target="_blank">Fructose Malabsorption Victoria</a> on Facebook. If you join, be a good person,
-                    but use critical thinking and watch out for misinformation. Trust but verify.</p>
+                    but use critical thinking, and watch out for misinformation. Trust, but verify.</p>
             </div>
 
         </div> <!-- end of grid -->
